--- a/theme.yaml
+++ b/theme.yaml
@@ -1,5 +1,5 @@
-name: Blank
-author: Kristoffer Alfheim
-description: Just a blank scaffold.
-homepage: 'https://github.com/krisawzm/blank-theme'
-code: Blank
+name: Base Theme
+author: Dynamedia
+description: Base scaffold.
+homepage: 'https://dynamedia.uk'
+code: base
