Slideout can move fixed header. Make form css sane

--- a/theme.yaml
+++ b/theme.yaml
@@ -1,8 +1,8 @@
-name: Starter Theme
+name: Base Theme
 author: Dynamedia
-description: Base scaffold.
+description: Base theme for adaptation.
 homepage: 'https://dynamedia.uk'
-code: starter
+code: base
 
 require:
 - Rainlab.Pages
